force-app/main/default/objects/Webinar_Member__c/Webinar_Member__c.object-meta.xml
<CustomObject>
    <label>Webinar Member</label>
    <nameField>
        <displayFormat>W Member - {0000}</displayFormat>
        <label>Webinar Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Webinar Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>