force-app/main/default/objects/Webinar_Member__c/fields/Attendance_Status__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Status__c</fullName>
    <label>Attendance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Present</fullName>
            </value>
            <value>
                <fullName>Absent</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
                <default>true</default>
                <label>Registered</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>