force-app/main/default/objects/Webinar_Member__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Webinar Members</relationshipLabel>
    <relationshipName>Webinar_Members</relationshipName>
    <type>Lookup</type>
</CustomField>