force-app/main/default/objects/Webinar_Member__c/fields/Current_Lead_Owner__c.field-meta.xml
<CustomField>
    <fullName>Current_Lead_Owner__c</fullName>
    <formula>Lead__r.Owner:User.FirstName  + &apos; &apos; +   Lead__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Lead Owner</label>
    <type>Text</type>
</CustomField>