force-app/main/default/objects/Webinar_Member__c/fields/Current_Lead_Stage__c.field-meta.xml
<CustomField>
    <fullName>Current_Lead_Stage__c</fullName>
    <formula>TEXT( Lead__r.Stage__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Lead Stage</label>
    <type>Text</type>
</CustomField>