force-app/main/default/objects/Webinar_Member__c/fields/Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Enquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enquiry</label>
    <referenceTo>Enquiry__c</referenceTo>
    <relationshipLabel>Webinar Members</relationshipLabel>
    <relationshipName>Webinar_Members</relationshipName>
    <type>Lookup</type>
</CustomField>