force-app/main/default/objects/Webinar_Member__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead__c</referenceTo>
    <relationshipLabel>Webinar Members</relationshipLabel>
    <relationshipName>Webinar_Members</relationshipName>
    <type>Lookup</type>
</CustomField>