force-app/main/default/objects/Webinar_Member__c/fields/Lead_Owner_at_Registration__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_at_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will populate lead owner when  Lead register for webinar.</description>
    <label>Lead Owner at Registration</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Webinar_Members</relationshipName>
    <type>Lookup</type>
</CustomField>