force-app/main/default/objects/Webinar_Member__c/fields/Lead_Owner_During_Webinar__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_During_Webinar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will populate Lead Owner at the time of webinar or during the webinar.</description>
    <label>Lead Owner During Webinar</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Webinar_Members1</relationshipName>
    <type>Lookup</type>
</CustomField>