force-app/main/default/objects/Webinar_Member__c/fields/Lead_Stage_at_Registration__c.field-meta.xml
<CustomField>
    <fullName>Lead_Stage_at_Registration__c</fullName>
    <description>This field will populate lead stage when Lead register for webinar.</description>
    <label>Lead Stage at Registration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>