force-app/main/default/objects/Webinar_Member__c/fields/Lead_Stage_During_Webinar__c.field-meta.xml
<CustomField>
    <fullName>Lead_Stage_During_Webinar__c</fullName>
    <description>This field will populate lead stage at the time of webinar or during the webinar.</description>
    <label>Lead Stage During Webinar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>