force-app/main/default/objects/Webinar_Member__c/fields/Meeting_Details__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Details__c</fullName>
    <label>Meeting Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>