force-app/main/default/objects/Webinar_Member__c/fields/Registrant_Id__c.field-meta.xml
<CustomField>
    <fullName>Registrant_Id__c</fullName>
    <label>Registrant Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>