force-app/main/default/objects/Webinar_Member__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Webinar Members</relationshipLabel>
    <relationshipName>Webinar_Members</relationshipName>
    <type>Lookup</type>
</CustomField>