force-app/main/default/objects/Webinar_Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Enquiry__c</columns>
    <columns>Lead__c</columns>
    <columns>Webinar__c</columns>
    <columns>Meeting_Details__c</columns>
    <columns>Attendance_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Registrant_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>