force-app/main/default/objects/Webinar_Member__c/listViews/High_Priority_Bangalore_Webinar_Member.listView-meta.xml
<ListView>
    <fullName>High_Priority_Bangalore_Webinar_Member</fullName>
    <filterScope>Queue</filterScope>
    <label>Experienced Priority-Bangalore</label>
    <queue>High_Priority_Bangalore</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>